--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My site" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-block">
       <!-- Navigation -->
       <nav>
         <!-- Logo -->
-        <a href="./index.html"> WebStudio </a>
+        <a href="./index.html" class="logotype-header"> 
+          <span class="logo-item">Web</span>Studio 
+        </a>
+        <!-- Navigation -->
         <ul>
           <li>
-            <a href="/">Studio</a>
+            <a href="/" class="nav-item">Studio</a>
           </li>
           <li>
-            <a href="/">Portfolio</a>
+            <a href="/" class="nav-item">Portfolio</a>
           </li>
           <li>
-            <a href="/">Contacts</a>
+            <a href="/" class="nav-item">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -29,117 +37,179 @@
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts-item">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <!-- Main Content -->
-    <main>
-      <!-- Section 1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+    <main class="main-block">
+      <!-- Hero section -->
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <!-- Button -->
-        <button type="button">Order Service</button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
-      <!-- Section 2 -->
-      <section>
-        <h2>Features</h2>
+      <!-- Features -->
+      <section class="features-section">
+        <h2 class="section-features-title">features</h2>
         <ul>
           <!--Strategy-->
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <!--Punctuality-->
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <!--Diligence-->
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <!--Technologies-->
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Section 3 -->
-      <section>
-        <h2>Our Team</h2>
+      <!-- Our Team -->
+      <section class="team-section">
+        <h2 class="section-team-title">our team</h2>
         <ul>
           <!--Mark-->
-          <li>
+          <li class="team-card">
             <img
-              src="./images/mark.jpg"
+              src="./images/team/mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-title">Mark Guerrero</h3>
+            <p class="position">Product Designer</p>
           </li>
           <!--Tom-->
-          <li>
+          <li class="team-card">
             <img
-              src="./images/tom.jpg"
+              src="./images/team/tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-title">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
           <!--Camila-->
-          <li>
+          <li class="team-card">
             <img
-              src="./images/camila.jpg"
+              src="./images/team/camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-title">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
           <!--Daniel-->
-          <li>
+          <li class="team-card">
             <img
-              src="./images/daniel.jpg"
+              src="./images/team/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-title">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Our Portfolio-->
+      <section class="portfolio-section">
+        <h2 class="section-portfolio-title">our portfolio</h2>
+        <ul>
+          <!--Banking App-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/banking-app.jpg" alt="banking app image" width="360" height="300">
+          <h3 class="portfolio-title">
+            banking app
+          </h3>
+          <p class="portfolio-text">
+            App
+          </p>
+        </li>
+        <!--Cashless Payment-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/cashless-payment.jpg" alt="cashless payment image" width="360" height="300">
+            <h3 class="portfolio-title">
+              cashless payment
+            </h3>
+            <p class="portfolio-text">
+              Marketing
+            </p>
+          </li>
+          <!--Meditation App-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/meditation-app.jpg" alt="meditation app image" width="360" height="300">
+            <h3 class="portfolio-title">
+              meditation app
+            </h3>
+            <p class="portfolio-text">
+              App
+            </p>
+          </li>
+          <!--Taxi Service-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/taxi-service.jpg" alt="taxi service image" width="360" height="300">
+            <h3 class="portfolio-title">
+              taxi service
+            </h3>
+            <p class="portfolio-text">
+              Marketing
+            </p>
+          </li>
+          <!--Screen Illustrations-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/screen-illustrations.jpg" alt="screen illustrations image" width="360" height="300">
+            <h3 class="portfolio-title">screen illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <!--Online Courses-->
+          <li class="portfolio-card">
+            <img src="./images/portfolio/online-courses.jpg" alt="online courses image" width="360" height="300">
+            <h3 class="portfolio-title">online courses</h3>
+            <p class="portfolio-text">
+              Marketing
+            </p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer-block">
       <!-- Logo -->
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" class="logotype-footer">
+        <span class="logo-item">Web</span>Studio
+      </a>
       <!--Text-->
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
