--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
       <nav>
         <!-- Logo -->
         <a href="./index.html" class="logotype-header"> 
-          <span class="logo-item">Web</span>Studio 
+        Web<span class="logo-accent-header">Studio</span>
         </a>
         <!-- Navigation -->
         <ul>
           <li>
-            <a href="/" class="nav-item">Studio</a>
+            <a href="./index.html" class="nav-item">Studio</a>
           </li>
           <li>
-            <a href="/" class="nav-item">Portfolio</a>
+            <a href="" class="nav-item">Portfolio</a>
           </li>
           <li>
-            <a href="/" class="nav-item">Contacts</a>
+            <a href="" class="nav-item">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- Contacts -->
-      <address>
+      <address class="contacts-address">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
@@ -149,7 +149,7 @@
           <li class="portfolio-card">
             <img src="./images/portfolio/banking-app.jpg" alt="banking app image" width="360" height="300">
           <h3 class="portfolio-title">
-            banking app
+            Banking App
           </h3>
           <p class="portfolio-text">
             App
@@ -159,7 +159,7 @@
           <li class="portfolio-card">
             <img src="./images/portfolio/cashless-payment.jpg" alt="cashless payment image" width="360" height="300">
             <h3 class="portfolio-title">
-              cashless payment
+              Cashless Payment
             </h3>
             <p class="portfolio-text">
               Marketing
@@ -169,7 +169,7 @@
           <li class="portfolio-card">
             <img src="./images/portfolio/meditation-app.jpg" alt="meditation app image" width="360" height="300">
             <h3 class="portfolio-title">
-              meditation app
+              Meditation App
             </h3>
             <p class="portfolio-text">
               App
@@ -179,7 +179,7 @@
           <li class="portfolio-card">
             <img src="./images/portfolio/taxi-service.jpg" alt="taxi service image" width="360" height="300">
             <h3 class="portfolio-title">
-              taxi service
+              Taxi Service
             </h3>
             <p class="portfolio-text">
               Marketing
@@ -188,13 +188,13 @@
           <!--Screen Illustrations-->
           <li class="portfolio-card">
             <img src="./images/portfolio/screen-illustrations.jpg" alt="screen illustrations image" width="360" height="300">
-            <h3 class="portfolio-title">screen illustrations</h3>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <!--Online Courses-->
           <li class="portfolio-card">
             <img src="./images/portfolio/online-courses.jpg" alt="online courses image" width="360" height="300">
-            <h3 class="portfolio-title">online courses</h3>
+            <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-text">
               Marketing
             </p>
@@ -205,7 +205,7 @@
     <!-- Footer -->
     <footer class="footer-block">
       <!-- Logo -->
-      <a href="./index.html" class="logotype-footer">
+      <a href="./index.html" class="logotype-accent-footer">
         <span class="logo-item">Web</span>Studio
       </a>
       <!--Text-->
