--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
     <!-- Footer -->
     <footer class="footer-block">
       <!-- Logo -->
-      <a href="./index.html" class="logotype-accent-footer">
-        <span class="logo-item">Web</span>Studio
+      <a href="./index.html" class="logotype-footer">
+        <span class="logo-accent-footer">Web</span>Studio
       </a>
       <!--Text-->
       <p class="footer-text">
