--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <footer class="footer-block">
       <!-- Logo -->
       <a href="./index.html" class="logotype-footer">
-        <span class="logo-accent-footer">Web</span>Studio
+        Web<span class="logo-accent-footer">Studio</span>
       </a>
       <!--Text-->
       <p class="footer-text">
